--- a/templates/non-public/newsFeed-view.html
+++ b/templates/non-public/newsFeed-view.html
@@ -1,65 +1,25 @@
+<div ng-include="'templates/non-public/navbar-view.html'"></div>
+
 <div class="row">
     <div class="col-sm-12">
-        <nav class="navbar navbar-default">
-            <div class="row">
-                <div class="container-fluid">
-                    <div class="col-md-10">
-                        <div class="navbar-header">
-                            <a class="navbar-brand" href="">News Feed</a>
-                        </div>
-                        <div class="pull-left">
-                            <ul class="nav navbar-nav navbar-right bs-glyphicons-list">
-                                <li>
-                                    <p class="bs-component">
-                                        <a href="" class="btn btn-success btn-sm nav-buttons">
-                                            <span class="glyphicon glyphicon-comment" aria-hidden="true"></span>
-                                        </a>
-                                    </p>
-                                </li>
-                                <li>
-                                    <p class="bs-component">
-                                        <a href="" class="btn btn-success btn-sm nav-buttons">
-                                            <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-                                        </a>
-                                    </p>
-                                </li>
-                                <li>
-                                    <p class="bs-component">
-                                        <a href="" class="btn btn-success btn-sm nav-buttons">
-                                            <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
-                                        </a>
-                                    </p>
-                                </li>
-                                <li>
-                                    <p class="bs-component">
-                                        <a href="" class="btn btn-success btn-sm nav-buttons">
-                                            <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
-                                        </a>
-                                    </p>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="collapse navbar-collapse pull-right" id="bs-example-navbar-collapse-1">
-                            <form class="navbar-form navbar-left" role="search">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Search">
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                    <div class="col-md-2 pull-right" >
-                        <ul class="nav navbar-nav navbar-right bs-glyphicons-list">
-                            <li>
-                                <p class="bs-component">
-                                    <a href="" class="btn btn-danger logoutBtn">
-                                        <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>
-                                    </a>
-                                </p>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </nav>
+        <div class="alert alert-dismissible alert-info">
+            <h1 id="navbar">News Feed
+                <span class="glyphicon glyphicon-apple" aria-hidden="true"></span>
+            </h1>
+        </div>
+
+    </div>
+</div>
+<div class="row">
+    <div class="jumbotron col-md-8">
+
+    </div>
+    <div class="panel panel-warning col-md-4">
+        <div class="panel-heading">
+            <h3 class="panel-title">Friends total</h3>
+        </div>
+        <div class="panel-body">
+            Panel content
+        </div>
     </div>
 </div>
