Implemented profile Edit and bug fixed

--- a/templates/non-public/navbar-view.html
+++ b/templates/non-public/navbar-view.html
@@ -21,14 +21,14 @@
                                 </li>
                                 <li>
                                     <p class="bs-component">
-                                        <a href="/profile" class="btn btn-success btn-sm nav-buttons">
+                                        <a href="" class="btn btn-success btn-sm nav-buttons">
                                             <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
                                         </a>
                                     </p>
                                 </li>
                                 <li>
                                     <p class="bs-component">
-                                        <a href="" class="btn btn-success btn-sm nav-buttons">
+                                        <a href="#/profile" class="btn btn-success btn-sm nav-buttons">
                                             <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
                                         </a>
                                     </p>
