--- a/templates/non-public/newsFeed-view.html
+++ b/templates/non-public/newsFeed-view.html
@@ -1,15 +1,7 @@
 <div ng-include="'templates/non-public/navbar-view.html'"></div>
 
-<div class="row">
-    <div class="col-sm-12">
-        <div class="alert alert-dismissible alert-info">
-            <h1 id="navbar">News Feed
-                <span class="glyphicon glyphicon-apple" aria-hidden="true"></span>
-            </h1>
-        </div>
+<div ng-init="pageHeader='News Feed'" ng-include="'templates/non-public/page-header-view.html'"></div>
 
-    </div>
-</div>
 <div class="row">
     <div class="jumbotron col-md-8">
 
