--- a/css/app.css
+++ b/css/app.css
@@ -56,3 +56,36 @@
 }
 
 /*News feed*/
+
+/*User Profile*/
+
+.user-profile {
+    margin: 0 7%;
+    border: 2px solid black;
+}
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
+}
+
+.timeLine {
+    width: 250px;
+    height: 150px;
+}
+
+/*User Profile*/
