Change password implemented

--- a/templates/non-public/newsFeed-view.html
+++ b/templates/non-public/newsFeed-view.html
@@ -1,6 +1,6 @@
 <div ng-include="'templates/non-public/navbar-view.html'"></div>
 
-<div ng-init="pageHeader='News Feed'" ng-include="'templates/non-public/page-header-view.html'"></div>
+<div ng-init="pageHeader='News Feeds'" ng-include="'templates/non-public/page-header-view.html'"></div>
 
 <div class="row">
     <div class="jumbotron col-md-8">
