--- a/templates/non-public/navbar-view.html
+++ b/templates/non-public/navbar-view.html
@@ -28,14 +28,14 @@
                                 </li>
                                 <li>
                                     <p class="bs-component">
-                                        <a href="#/profile" class="btn btn-success btn-sm nav-buttons">
+                                        <a href="#/users/profile" class="btn btn-success btn-sm nav-buttons">
                                             <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
                                         </a>
                                     </p>
                                 </li>
                                 <li>
                                     <p class="bs-component">
-                                        <a href="" class="btn btn-success btn-sm nav-buttons">
+                                        <a href="#/users/changePassword" class="btn btn-success btn-sm nav-buttons">
                                             <span class="glyphicon glyphicon-lock" aria-hidden="true"></span>
                                         </a>
                                     </p>
