--- a/templates/non-public/user-profile-view.html
+++ b/templates/non-public/user-profile-view.html
@@ -1,7 +1,7 @@
 <div ng-include="'templates/non-public/navbar-view.html'"></div>
 <div ng-init="pageHeader='Edit Profile'" ng-include="'templates/non-public/page-header-view.html'"></div>
-<div class="row jumbotron">
-    <div class="col-sm-10 user-profile">
+<div class="row">
+    <div class="col-lg-12 user-profile">
         <div class="row">
             <div class="col-md-3">
                 <div>
