--- a/templates/non-public/navbar-view.html
+++ b/templates/non-public/navbar-view.html
@@ -6,7 +6,9 @@
                     <div class="col-md-10">
                         <div class="navbar-header">
                             <div class="profile-image-thumb">
-                                <img class="navi-picture" src="" ng-src="{{currentUserprofilepic}}" alt=".."/>
+                                <a href="#" >
+                                    <img class="navi-picture" src="" ng-src="{{currentUserprofilepic}}" alt=".."/>
+                                </a>
                                 <span class="navi-username">{{currentUsername}}</span>
                             </div>
                         </div>
@@ -14,7 +16,7 @@
                             <ul class="nav navbar-nav navbar-right bs-glyphicons-list">
                                 <li>
                                     <p class="bs-component">
-                                        <a href="" class="btn btn-success btn-sm nav-buttons">
+                                        <a href="#/feeds" class="btn btn-success btn-sm nav-buttons">
                                             <span class="glyphicon glyphicon-comment" aria-hidden="true"></span>
                                         </a>
                                     </p>
