--- a/templates/non-public/newsFeed-view.html
+++ b/templates/non-public/newsFeed-view.html
@@ -6,12 +6,7 @@
     <div class="jumbotron col-md-8">
 
     </div>
-    <div class="panel panel-warning col-md-4">
-        <div class="panel-heading">
-            <h3 class="panel-title">Friends total</h3>
-        </div>
-        <div class="panel-body">
-            Panel content
-        </div>
+    <div class="col-md-4">
+        <div ng-include="'templates/non-public/friends-panel-view.html'"></div>
     </div>
 </div>
