--- a/templates/non-public/user-profile-view.html
+++ b/templates/non-public/user-profile-view.html
@@ -6,7 +6,7 @@
             <div class="col-md-3">
                 <div>
                     <h3>Profile image</h3>
-                    <img ng-src="{{ profileData.profileImageData }}" alt="image" />
+                    <img class="profile-image" ng-src="{{ profileData.profileImageData }}" alt="image" />
                     <div>
                         <span class="btn btn-default btn-file btn-primary">
                             Upload <input type="file" ng-model="profileData.profileImageData" accept="image/*" app-filereader />
