--- a/templates/non-public/friends-panel-view.html
+++ b/templates/non-public/friends-panel-view.html
@@ -1,4 +1,4 @@
-<div class="panel panel-warning" ng-controller="userController">
+<div class="panel panel-warning" >
     <div class="panel-heading">
         <h3 class="panel-title">Friends {{ownFriendsCollection.length}} total</h3>
     </div>
