--- a/templates/non-public/newsFeed-view.html
+++ b/templates/non-public/newsFeed-view.html
@@ -3,33 +3,8 @@
 <div ng-init="pageHeader='News Feeds'" ng-include="'templates/non-public/page-header-view.html'"></div>
 
 <div class="row">
-    <div class="jumbotron col-md-8">
-        <div class="modal-dialog" ng-repeat="feed in newsfeed">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <a href="" class="thumbnail">
-                        <img alt="img" ng-src="{{feed.author.profileImageData}}"/>
-                    </a>
-                    <span class="modal-title">{{feed.author.name}}</span>
-                </div>
-                <div class="modal-body">
-                    <p>{{feed.postContent}}</p>
-                </div>
-                <div class="modal-footer">
-                    <div class="pull-left">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Like
-                            <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
-                        </button>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Dislike
-                            <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
-                        </button>
-                    </div>
-                    <button type="button" class="btn btn-primary">Comment
-                        <span class="glyphicon glyphicon-comment" aria-hidden="true"></span>
-                    </button>
-                </div>
-            </div>
-        </div>
+    <div class="col-md-8">
+
     </div>
     <div class="col-md-4">
         <div ng-include="'templates/non-public/friends-panel-view.html'"></div>
