--- a/templates/non-public/navbar-view.html
+++ b/templates/non-public/navbar-view.html
@@ -6,8 +6,8 @@
                     <div class="col-md-10">
                         <div class="navbar-header">
                             <div class="profile-image-thumb">
-                                <a href="#/users/wall" >
-                                    <img class="navi-picture" src="" ng-src="{{currentUserprofilepic}}" alt=".."/>
+                                <a href="" >
+                                    <img class="img-thumbnail navi-picture" src="" ng-src="{{currentUserprofilepic}}" alt=".."/>
                                 </a>
                                 <span ng-click="goToMyWall(currentUsername)" class="navi-username">{{currentUsername}}</span>
                             </div>
@@ -23,7 +23,7 @@
                                 </li>
                                 <li>
                                     <p class="bs-component">
-                                        <a href="" class="btn btn-success btn-sm nav-buttons">
+                                        <a href="#/users/friendslist" class="btn btn-success btn-sm nav-buttons">
                                             <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
                                         </a>
                                     </p>
