--- a/templates/non-public/user-wall-view.html
+++ b/templates/non-public/user-wall-view.html
@@ -3,7 +3,7 @@
     <div class="col-sm-12">
         <div class="timeline-container">
             <img ng-src="{{userWallData.coverImageData}}" alt="timeline" class="user-timeline-image"/>
-            <img ng-src="{{userWallData.profileImageData}}" alt="timeline" class="user-profile-image"/>
+            <img ng-src="{{userWallData.profileImageData}}" alt="timeline" class="img-thumbnail user-profile-image"/>
             <span class="user-wall-fullName">{{userWallData.name}}</span>
             <a href="" class="btn btn-success btn-lg btn-isFriend" ng-show="userWallData.isFriend === true">Friend</a>
             <a href="" class="btn btn-danger btn-lg btn-isFriend" ng-show="userWallData.isFriend === false">Add friend</a>
