--- a/templates/non-public/navbar-view.html
+++ b/templates/non-public/navbar-view.html
@@ -45,10 +45,11 @@
                             </ul>
                         </div>
                         <div class="collapse navbar-collapse pull-right" id="bs-example-navbar-collapse-1">
-                            <form class="navbar-form navbar-left" role="search">
+                            <form class="navbar-form navbar-left" name="searchUsersForm" role="search">
                                 <div class="form-group">
-                                    <input type="text" class="form-control navi-search" placeholder="Search">
+                                    <input type="text" name="usersSearchBox" ng-model="searchCriteria" ng-change="searchByUsersFullName(searchCriteria)" class="form-control navi-search"  placeholder="Search">
                                     <a href="" class="btn btn-default navi-searchImg"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></a>
+                                    <div ng-if="searchCriteria.length" ng-include="'templates/non-public/user-search-view.html'"></div>
                                 </div>
                             </form>
                         </div>
