--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,9 @@
+/*Footer*/
+footer {
+    margin-top: 2%;
+}
+/*Footer*/
+
 /*Welcome screen*/
 .welcomeHeader {
     background-color: #3a5795;
@@ -78,15 +84,33 @@ h1#navbar {
 /*User Profile*/
 
 .user-profile {
-    border: 2px solid black;
+    border-radius: 10px;
+    margin: 0 4%;
+    border: 1px solid black;
+    box-shadow: 2px 5px 10px #555555;
+}
+
+.profile-image-header {
+    font-size: 2.5rem;
+    color: #555555;
 }
 
 .profile-image {
-    border: 1px solid #54b4eb;
+    margin-bottom: 6%;
+    border: 3px solid #555555;
     width: 210px;
     height: 200px;
     max-width: 210px;
     max-height: 200px;
+}
+
+.profile-timeline {
+    margin-bottom: 6%;
+    border: 3px solid #555555;
+    height: 200px;
+    width: 600px;
+    max-height: 200px;
+    max-width: 600px;
 }
 
 .btn-file {
