--- a/css/app.css
+++ b/css/app.css
@@ -205,6 +205,27 @@ h1#navbar {
     color: #317eac;
     text-decoration: underline;
 }
+
+.modal-header  {
+    overflow:hidden;
+    padding-bottom: 0;
+}
+.modal-title {
+    margin-left: 3%;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 1.8rem;
+    font-weight: 900;
+    color: #317eac;
+}
+
+.modal-posted-date {
+    margin-left: 3%;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: #317eac;
+}
+.btn-vote {
+    width: 85px;
+}
 /*Wall*/
 
 /*Friends list*/
@@ -239,3 +260,23 @@ h1#navbar {
     border: 2px solid whitesmoke;
 }
 /*Search users*/
+
+/*Comment box*/
+.comment-box {
+    margin-top: 10%;
+}
+
+.post-comments-container {
+    width: 70%;
+    margin: 1% 5%;
+}
+
+.post-comments-container > .panel-heading {
+    padding: 2px;
+}
+
+.comment-user-image {
+    width:10%;
+    max-width:10%;
+}
+/*Comment box*/
