--- a/templates/non-public/user-wall-view.html
+++ b/templates/non-public/user-wall-view.html
@@ -51,6 +51,16 @@
                     <div class="panel-body">
                         {{comment.commentContent}}
                     </div>
+                    <div class="container-comment-votes">
+                        <div class="pull-right ">
+                            <button type="button" class="btn btn-xs btn-success btn-vote-comment" data-dismiss="modal">
+                                <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
+                            </button>
+                            <button type="button" class="btn btn-xs btn-danger btn-vote-comment" data-dismiss="modal">
+                                <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
